# overlap-annotations

./: .gitattributes  .gitignore  annotation_pool.tsv  annotations_export.json  annotations_export.tsv  annotatori_pravidla_overlap.md  backup.sh  database_transfer.md  deploy.sh  deployment.md  found_issues.md  project_log.md  pyproject.toml  technical_documentation.md  technical_documentation_extension.md
notebooks/: calibration_success_rate.ipynb  load_overlap_shards.ipynb
static/: index.html
tests/: test_app.py
webapp/: app.py  db.py  import_data.py  run.py
